feat: reworked import structure to match svc changes
